# erlyate

./: .gitignore  Makefile.am  README  _build.cfg  configure.ac
releases/: Makefile.am  sipclient.rel.in  yate.rel.in  yate_demo.rel.in
rules/: app.mk  rel.mk  rules.mk
sipclient/src/: Makefile.am  sipclient.app-in  sipclient.erl
src/: Makefile.am
src/yate/: Makefile.am
yate/: Makefile.am
yate/c_src/: Makefile.am  wrapper.c
yate/ebin/: yate.app
yate/include/: Makefile.am
yate/priv/: Makefile.am
yate/src/: Makefile.am  yate.app-in  yate.erl  yate.hrl  yate_app.erl  yate_call.erl  yate_call_reg.erl  yate_command.erl  yate_config.erl  yate_conn.erl  yate_conn_srv.erl  yate_decode.erl  yate_encode.erl  yate_notify.erl  yate_pending.erl  yate_port_srv.erl  yate_reg_srv.erl  yate_srv.erl  yate_sup.erl  yate_util.erl
yate_demo/: Makefile.am
yate_demo/ebin/: yate_demo.app
yate_demo/src/: Makefile.am  yate_clock.erl  yate_demo.app-in  yate_demo.erl  yate_demo_call.erl
