include $(top_srcdir)/rules/app.mk

AM_ERLCFLAGS = -I$(srcdir)/../include

OTP_APP = yate
yate_VSN = $(VERSION)

yate_SRCS = \
key_dict.erl \
key_list.erl \
yate_app.erl \
yate_call.erl \
yate_call_reg.erl \
yate_command.erl \
yate_config.erl \
yate_conn.erl \
yate_conn_srv.erl \
yate_decode.erl \
yate_encode.erl \
yate.erl \
yate_notify.erl \
yate_pending.erl \
yate_port_srv.erl \
yate_reg_srv.erl \
yate_srv.erl \
yate_sup.erl \
yate_test.erl \
yate_util.erl

yate_HDRS = \
yate.hrl
